--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -23,7 +23,18 @@
   "first_make_change": "First, make changes to verse above",
   "close": "Close",
   "attention": "Attention:",
-  "select_translation": "Please ${highlight_start} select ${highlight_end} the correct translation for your current check.",
-  "can_skip": "If you are unable to perform this check, you may ${highlight_start} skip it ${highlight_end} and come back to it later.",
-  "skip": "Skip"
+  "select_translation": "Please ${span} select ${span} the correct translation for your current check.",
+  "can_skip": "If you are unable to perform this check, you may ${span} skip it ${span} and come back to it later.",
+  "skip": "Skip",
+  "click_show_expanded": "Click to show expanded verses",
+  "check": {
+    "selections_found": "Selections were found for this check",
+    "no_selections_found": "No selections were found for this check",
+    "verse_edits_found": "Verse edits were found for this check",
+    "no_verse_edits_found": "No Verse edits were found for this check",
+    "comments_found": "Comments were found for this check",
+    "no_comments_found": "No comments were found for this check",
+    "bookmarked": "This check has been bookmarked for review",
+    "not_bookmarked": "This check has not been bookmarked for review"
+  }
 }
