--- a/src/locale/Hindi-hi_IN.json
+++ b/src/locale/Hindi-hi_IN.json
@@ -23,7 +23,18 @@
   "first_make_change": "सबसे पहले, उपरोक्त कविता में परिवर्तन करें",
   "close": "बंद करे",
   "attention": "ध्यान:",
-  "select_translation": "कृपया ${highlight_start} चुनें ${highlight_end} अपने वर्तमान जांच के लिए सही अनुवाद।",
-  "can_skip": "यदि आप इस जांच को करने में असमर्थ हैं, तो आप ${highlight_start} को ${highlight_end} को छोड़ सकते हैं और बाद में वापस आ सकते हैं।",
-  "skip": "छोड़ें"
+  "select_translation": "कृपया ${span} चुनें ${span} अपने वर्तमान जांच के लिए सही अनुवाद।",
+  "can_skip": "यदि आप इस जांच को करने में असमर्थ हैं, तो आप ${span} को ${span} को छोड़ सकते हैं और बाद में वापस आ सकते हैं।",
+  "skip": "छोड़ें",
+  "click_show_expanded": "विस्तारित छंद दिखाने के लिए क्लिक करें",
+  "check": {
+    "selections_found": "इस चेक के लिए चयन पाया गया था",
+    "no_selections_found": "इस चेक के लिए कोई चयन नहीं मिला",
+    "verse_edits_found": "इस चेक के लिए सुराह संपादन पाए गए",
+    "no_verse_edits_found": "इस चेक के लिए कोई सुराह नहीं मिला",
+    "comments_found": "इस चेक के लिए टिप्पणियाँ मिलीं",
+    "no_comments_found": "इस चेक के लिए कोई टिप्पणी नहीं मिली",
+    "bookmarked": "इस जांच को समीक्षा के लिए बुकमार्क किया गया है",
+    "not_bookmarked": "समीक्षा के लिए यह चेक बुकमार्क नहीं किया गया है"
+  }
 }
