Added invalidated icon and text.  Updated unit tests.

--- a/src/locale/Hindi-hi_IN.json
+++ b/src/locale/Hindi-hi_IN.json
@@ -8,6 +8,7 @@
   "empty_verse": "कोई भी चयन नहीं किया जा सकता क्योंकि कविता रिक्त है। <br/> आप इस कविता को संपादित करके इसे ठीक कर सकते हैं। <br/> यदि वांछित है, तो आप टिप्पणी भी छोड़ सकते हैं या इस चेक को बुकमार्क कर सकते हैं।",
   "no_selection": "कोई चयन नहीं किया गया है। <br/> चयन बटन पर क्लिक करें, फिर इस चेक के लिए अनुवाद का चयन करें।",
   "please_select": "कृपया के लिए अनुवाद का चयन करें:",
+  "selection_invalidated": "इस चेक के लिए चयन अवैध था।",
   "translated_as": "के रूप में अनुवाद किया गया है:",
   "bookmark": "बुकमार्क",
   "cancel": "रद्द करना",
